# corpus-council

./: .gitignore  README.md  config.yaml  goals_manifest.json  pyproject.toml  verify_server.sh
.forge/: constitution.md  council.md  product.md
.forge/00001_init/: plan.md  project.md  verifier.md
.forge/00002_consolidated/: plan.md  project.md  verifier.md
.forge/00003_goals/: plan.md  project.md  verifier.md
.forge/00004_simple_frontend/: plan.md  project.md  verifier.md
.forge/00005_goals_unification/: plan.md  project.md  verifier.md
.forge/00006_sequential_parallel/: plan.md  project.md  verifier.md
.forge/00008_externalized_users/: plan.md  project.md  verifier.md
.forge/00009_single_persona/: plan.md  project.md  verifier.md
.forge/council/: api-designer.md  concurrency-engineer.md  data-engineer.md  product-manager.md  programmer.md  prompt-engineer.md  security-engineer.md  tester.md  ux-engineer.md
docs/: goal-authoring-guide.md
examples/: council-consolidated.txt  council.txt  rlm.txt
frontend/: app.js  index.html  style.css
goals/: create-plan.md  intake.md
templates/: collection_prompt.md  collection_validate.md  council_consolidated.md  escalation_check.md  escalation_resolution.md  final_synthesis.md  member_deliberation.md
tests/: conftest.py
tests/integration/: test_admin_router.py  test_api.py  test_chat_router.py  test_consolidated_integration.py  test_files_router.py  test_full_collection_flow.py  test_full_conversation_flow.py  test_goals_integration.py  test_parallel_llm.py  test_router_registration.py
(+126 files in other folders)
