[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corpus-council"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.13",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
    "PyYAML>=6.0",
    "pydantic>=2.9",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[project.scripts]
corpus-council = "corpus_council.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus_council"]

[tool.pytest.ini_options]
addopts = "--cov=src/corpus_council/core --cov-fail-under=80"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.coverage.run]
source = ["src/corpus_council/core"]
